Vercel deberia funcionar con esto

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://polibyus.github.io/Shop-of-Roll/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -19,7 +18,6 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.2.0",
-    "gh-pages": "^3.2.3"
+    "file-loader": "^6.2.0"
   }
 }
